--- a/src/java/resources/application.properties
+++ b/src/java/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=9090
+server.port=8080
 mybatis.mapper-locations=classpath:mappers/*xml
-mybatis.productType-aliases-package=com.example.bigevent.mybatis.entity
+mybatis.productType-aliases-package=com.admin.pojo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/big_event
+spring.datasource.url=jdbc:mysql://localhost:3306/shopping
 spring.datasource.username=root
 spring.datasource.password=123456
 
