--- a/src/java/resources/application.properties
+++ b/src/java/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/shopping
 spring.datasource.username=root
 spring.datasource.password=123456
-
 mybatis.configuration.map-underscore-to-camel-case=true
+# sout sql
+#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
