--- a/src/java/resources/application.properties
+++ b/src/java/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.password=123456
 mybatis.configuration.map-underscore-to-camel-case=true
 # sout sql
 #mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+file.upload.path=D:\\desktop\\static\\admin\\
+#file type
+file.upload.allowType[0]=application/pdf
+file.upload.allowType[1]=application/docx
+file.upload.allowType[2]=image/png
+file.upload.allowType[3]=image/jpg
+file.upload.allowType[4]=image/jpeg
